--- a/package.json
+++ b/package.json
@@ -39,5 +39,10 @@
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
     "typescript": "~5.1.3"
+  },
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   }
 }
